[package]
name = "btc_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bitcoin = "0.30"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
lru = "0.12"
bytes = "1.0"
parking_lot = "0.12"
fnv = "1.0"
url = "2.0"
rand = "0.8"
indicatif = "0.17"
futures = "0.3"
num_cpus = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.10"
num-integer = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3