[package]
name = "btc_scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btc_scanner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bitcoin = "0.30"
bitcoin_hashes = "0.12"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bytes = "1.0"
parking_lot = "0.12"
lru = "0.12"
fnv = "1.0"
url = "2.0"
rand = "0.8"
indicatif = "0.17"
futures = "0.3"
num_cpus = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
