[package]
name = "btc_scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btc_scanner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.29"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
k256 = "0.13"
bitcoin = "0.30"
bitcoin_hashes = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
sha2 = "0.10"
parking_lot = "0.12"
lru = "0.12"
bs58 = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
